// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card with isCompact applied  1`] = `
<article
  className="pf-c-card pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Card-7"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe={true}
  id=""
/>
`;

exports[`card with isHoverable applied  1`] = `
<article
  className="pf-c-card pf-m-selectable"
  data-ouia-component-id="OUIA-Generated-Card-6"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe={true}
  id=""
/>
`;

exports[`className is added to the root element 1`] = `"pf-c-card extra-class"`;

exports[`renders with PatternFly Core styles 1`] = `
<article
  className="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe={true}
  id=""
/>
`;
